--- a/src/components/TextAreaField/style.module.scss
+++ b/src/components/TextAreaField/style.module.scss
@@ -1,3 +1,12 @@
-.test {
-  color: red !important;
+.indicator {
+  display: flex;
+  align-items: center;
+  color: #67717d;
+  font-family: Mont, sans-serif;
+  font-size: 1.15em;
+  font-size: 30px;
+  font-weight: 900;
+  opacity: 0.2;
+  text-transform: uppercase;
+  margin-right: 12px;
 }
